# xbot

./: .ci-runner.sh  .gitlab-ci.yml  README.md  camera_image.py  vs.info  xbot.md
xbot/: CMakeLists.txt  README.md  package.xml
xbot_bringup/: CMakeLists.txt  README.md  package.xml
xbot_bringup/debian/: changelog  control  rules
xbot_bringup/launch/: realsense.launch  rplidar.launch  xbot-u-arm.launch  xbot-u.launch  xbot.launch
xbot_bringup/launch/includes/: xbot.launch.xml
xbot_description/: CMakeLists.txt  README.md  package.xml  urdf.rviz  urdf_gazebo.rviz
xbot_description/debian/: changelog  control  files  rules
xbot_description/launch/: display.launch  gazebo.launch
xbot_description/launch/include/: xbot2.launch.xml
xbot_description/urdf/: robot.xacro  robot_arm.xacro  sick_tim.urdf.xacro  xbot-u.urdf.xacro
xbot_driver/: CMakeLists.txt  README.md  package.xml
xbot_driver/debian/: changelog  control  rules
xbot_driver/doxygen/: mainpage.dox
xbot_driver/doxygen/english/: en_appendix_parameters.dox  en_appendix_protocol.dox  en_appendix_version.dox  en_ftdi.dox  en_getting_started.dox  en_installation_linux.dox  en_installation_windows.dox  en_mainpage.dox  en_sigslots.dox  en_simple_example.dox
xbot_driver/doxygen/korean/: ko_mainpage.dox  ko_sigslots.dox  ko_simple_example.dox
xbot_driver/include/xbot_driver/: command.hpp  lqueue.h  packets.hpp  parameters.hpp  xbot.hpp
xbot_driver/src/driver/: CMakeLists.txt  command.cpp  core_sensors.cpp  diff_drive.cpp  sensors.cpp  xbot.cpp
xbot_driver/src/test/: initialisation.cpp  sigslots.cpp  simple_loop.cpp  velocity_commands.cpp
xbot_driver/src/tools/: simple_keyop.cpp  version_info.cpp
xbot_face/: CMakeLists.txt  README.md  package.xml
xbot_face/script/: camera_image.py  face_register.py  vs.info  vs.out
xbot_face/src/: wenhou.cpp
xbot_msgs/: CMakeLists.txt  README.md  package.xml
xbot_msgs/debian/: changelog  control  rules
xbot_msgs/msg/: Battery.msg  CoreSensor.msg  Echo.msg  ExtraSensor.msg  Imu.msg  InfraRed.msg  RawImu.msg  XbotPose.msg  XbotState.msg
xbot_navi/: CMakeLists.txt  package.xml
xbot_navi/launch/: demo.launch  input_keypoints.launch  rviz_demo.launch
xbot_navi/map/: 807demo.pgm  807demo.yaml  acme.pgm  acme.yaml  iscas5f_out.pgm  iscas5f_out.yaml  qunlou4f.pgm  qunlou4f.yaml  qunlou4f_1.pgm  qunlou4f_1.yaml
xbot_navi/param/: costmap_common_params.yaml  greet.json  greet_qunlou4f.json  greet_zd807.json  iscas5f_greet.json  iscas5f_kp.json  kp.json  kp_qunlou4f.json  kp_zd807.json
xbot_navi/rviz/: demo.rviz
xbot_navi/script/: demo.py
xbot_node/: CMakeLists.txt  README.md  package.xml
xbot_node/debian/: changelog  control  rules
xbot_node/include/xbot_node/: xbot_ros.hpp
xbot_node/param/: base.yaml
xbot_safety_controller/: CMakeLists.txt  README.md  package.xml
xbot_safety_controller/debian/: changelog  control  rules
xbot_safety_controller/include/xbot_safety_controller/: safety_controller.hpp
xbot_talker/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  bootstrap.sh  package.xml  setGrammarConfig.sh
xbot_talker/defaultconfig/: answer_dic.csv  dialogue_config.json
xbot_talker/defaultconfig/audio/: age_two_channel.pcm  awaken.pcm  awaken_two.pcm  nihao_test.pcm
xbot_talker/include/: common_config.h  file_operation.h  formats.h  linuxrec.h
xbot_talker/include/awaken/: awaken_offline.h
xbot_talker/include/nlp/: nlp_feedback.h
xbot_talker/include/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
xbot_talker/include/ros/: xbot_talker_ros.h
xbot_talker/include/tts/: text_to_speech.h
xbot_talker/launch/: asr_module.launch  awaken_module.launch  build_grammar.launch  nlp_module.launch  talker.launch  tts_module.launch
xbot_talker/msg/: action.msg  action_ros.msg  actionmode.msg  actionmode_ros.msg  awaken_status.msg  dialogue.msg  dialogue_ros.msg  online_asr_result.msg  recog_result.msg
xbot_talker/scripts/: dialogue_configuration.py  plot.py
xbot_talker/sdk_examples/baidu_asr_example/: CMakeLists.txt  README.md  baidu_asr_example.cpp  build_and_run.sh
xbot_talker/sdk_examples/tuling_robot_example/: CMakeLists.txt  README.md  build_and_run.sh  tuling_robot_example.cpp
xbot_talker/sdk_examples/xfei_asr_example/: CMakeLists.txt  README.md  asr_example.cpp  build_and_run.sh
xbot_talker/sdk_examples/xfei_awaken_example/: CMakeLists.txt  README.md  awaken_offline_example.cpp  build_and_run.sh
xbot_talker/sdk_examples/xfei_tts_example/: CMakeLists.txt  README.md  build_and_run.sh  tts_example.cpp
xbot_talker/src/ros/: asr_module.cpp  awaken_module.cpp  build_grammar_module.cpp  nlp_module.cpp  tts_module.cpp  xbot_talker_ros.cpp
xbot_talker/srv/: add_dialogue.srv  call_action.srv  call_actionmode.srv  call_asr.srv  deploy_dialogue.srv  history_record.srv  keyword_config.srv  nlpdialog_config.srv  roolback_dialogue.srv  xbot_tts.srv
xbot_talker/tests/: README.md
xbot_talker/tests/asr_test/: AsrTestReadme.md  read_all_files_and_recog.cpp
xbot_talker/tests/nlp_test/: NlpTestReadme.md  tuling_test.cpp
xbot_talker/userconfig/: ANSWER_TO_KEYWORD.csv  grammar.bnf  new_dictionary.txt
xbot_talker/userconfig/json/: action.json  action_mode.json  dialogue.json
xbot_tools/: CMakeLists.txt  README.md  package.xml
xbot_tools/debian/: changelog  control  rules
xbot_tools/scripts/: add_two_ints_server.py  const_dist_move.py  forward.py  gps_code.txt  keyboard_control.py  keyboard_teleop.py  make_plan.py  odom2yaw.py  pcb_checker.py  pub_topic.py  pycamera.py  q4torpy.py  read_serial.py  rotate.py  test.py  vs.info  vs.out  xbot_checker.py  xbot_checker3.py  xbot_control_view.py  xbot_cruise.py  xbot_qt.ui  xbot_ui.py
xbot_tools/scripts/checker/: vs.info  (+1 more)
xbot_tools/src/: CMakeLists.txt  camera_pusher.cpp  kalman_filter.cpp
xbot_tools/udev/: 71-xbot.rules  72-sensor.rules
(+53 files in other folders)
