<package>
  <name>xbot_driver</name>
  <version>1.2.1</version>
  <description>C++ driver library for xbot:
    Pure C++ driver library for xbot. This is for those who do not wish to use ROS on their systems.</description>
  <author>Roc</author>
  <author>yowlings@buaa.edu.cn</author>
  <maintainer email="yowlings@buaa.edu.cn">Roc</maintainer>
  <license>LGPL</license>  
  <url type="website">http://ros.org/wiki/xbot_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_mobile_robot</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_devices</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecl_command_line</build_depend>

  <run_depend>ecl_mobile_robot</run_depend>
  <run_depend>ecl_converters</run_depend>
  <run_depend>ecl_devices</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_sigslots</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecl_command_line</run_depend>
</package>
