<package>
  <name>xbot_msgs</name>
  <version>3.0.1</version>
  <description>
    <p>
      Xbot message and service types: custom messages and services for Xbot packages.
    </p> 
  </description>
  <author email="wangpeng@droid.ac.cn">Roc Wang</author>
  <maintainer email="wangpeng@droid.ac.cn">Roc Wang</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
