<package>
  <name>xbot_safety_controller</name>
  <version>0.7.4</version>
  <description>
    A controller ensuring the safe operation of Xbot.

    The SafetyController keeps track of bumper, cliff and wheel drop events. In case of the first two,
    Xbot is commanded to move back. In the latter case, Xbot is stopped.
    
    This controller can be enabled/disabled.
    The safety states (bumper pressed etc.) can be reset. WARNING: Dangerous!
  </description>
  <author>Roc</author>
  <author>yowlings@buaa.edu.cn</author>
  <maintainer email="yowlings@buaa.edu.cn">Roc</maintainer>
  <license>LGPL</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>xbot_msgs</build_depend>
  <build_depend>yocs_controllers</build_depend>
  <build_depend>ecl_threads</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>xbot_msgs</run_depend>
  <run_depend>yocs_controllers</run_depend>
  <run_depend>ecl_threads</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
